--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,15 +29,15 @@ jobs:
           haxelib setup "%HAXELIB_ROOT%"
           haxelib install lime 7.9.0
           haxelib install openfl
-          haxelib install flixel
+          haxelib install flixel 4.11.0
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-addons
           haxelib install flixel-ui
           haxelib install hscript
           haxelib install flixel-addons
-          haxelib install newgrounds
-          haxelib git polymod https://github.com/MasterEric/polymod.git
+          haxelib install newgrounds 1.1.5
+          haxelib install polymod 1.3.1
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib list
           haxelib run lime build html5
